# artemis-workdir-gr-template

./: .gitignore  artemislogon.C  def.hist.yaml  mapper.conf  mapper_rawcheck.conf  mapper_tamidaq.conf
conf/map/: hbd_test.map  hrtdc_test.map  pla_gr_amaneq.map  pla_gr_vme.map  pla_hr.map  rf.map  vdc_amaneq_gr.map
hist/: basic.hist.yaml  correlations.hist.yaml
hist/pla/: pla.tmpl.hist.yaml  pla_gr.hist.yaml  pla_gr.tmpl.hist.yaml
hist/vdc/: vdc.hist.yaml
macro/: ResetHistInJSROOT.C  RunAndEval.C  Shift.C  autoRun.C  online.C  stop.txt
plugin/: CMakeLists.txt
plugin/src/: CMakeLists.txt
prm/mwdc/vdc_gr/dt2dl/000221/dt_hist/: dt_u1.data  dt_u2.data  dt_x1.data  dt_x2.data
prm/mwdc/vdc_gr/dt2dl/000224/dt_hist/: dt_u1.data  dt_u2.data  dt_x1.data  dt_x2.data
prm/mwdc/vdc_gr/dt2dl/000417/dt_hist/: dt_u1.data  dt_u2.data  dt_x1.data  dt_x2.data
prm/vdc_gr/: plane.yaml
scripts/: connect.txt  incrnum.sh  inittask.txt  reset_device.txt  reset_task.txt  start.sh  start.txt  stop.sh  stop.txt
steering/: chk.yaml  chk_demo.yaml  chkstream.yaml  chkstrvdc.tmpl.yaml  offline.tmpl.yaml  online.tmpl.yaml  pla_gr.tmpl.yaml  strevt.inc.yaml  strevtall.inc.yaml  tref.yaml  vdc_gr.yaml  vdc_gr_str.yaml
steering/bld/pla/: pla.tmpl.yaml  pla_demo.yaml
steering/inc/: main_cut.inc.yaml  main_evt.inc.yaml  pla_gr.inc.yaml  rf.inc.yaml  str-offline-tf.inc.yaml  str-online-tf.inc.yaml  vdc_gr_cut.inc.yaml  vdc_gr_str.inc.yaml
